prevent bottem scrollbars from appering on text boxes

--- a/generator.css
+++ b/generator.css
@@ -3,6 +3,7 @@
 	overflow: scroll;
 	display:inline-block;
 	height: 500px;
+	overflow-x:hidden;
 }
 
 #search-input {
